(lang dune 3.11)

(name server)

(generate_opam_files true)

(source
 (github jakequinter/vow_to_venue))

(authors "Jake Quinter")

(maintainers "Jake Quinter")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name server)
 (synopsis "Server for vow_to_venue")
 (description "Server for vow_to_venue")
 (depends ocaml dune dream sqlite3)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
